build: cv button

--- a/index.html
+++ b/index.html
@@ -8,9 +8,11 @@
 </head>
 <body>
     <header>
-        <p>
-            Guillem Senabre Prades
-        </p>
+        <h1>Guillem Senabre Prades</h1>
+        <ul>
+            <li><p>About</p></li>
+            <li><button>CV</button></li>
+        </ul>
     </header>
 </body>
 </html>
