--- a/index.html
+++ b/index.html
@@ -14,5 +14,12 @@
             <li><button>CV</button></li>
         </ul>
     </header>
+    <main>
+        <container class="container">
+            <button class="projectButton">Projects</button>
+            <button class="aboutButton">About</button>
+            <button class="contactButton">Contact</button>
+        </container>
+    </main>
 </body>
 </html>
