--- a/index.html
+++ b/index.html
@@ -15,11 +15,16 @@
         </ul>
     </header>
     <main>
-        <container class="container">
+        <div class="wrapper1">
             <button class="projectButton">Projects</button>
             <button class="aboutButton">About</button>
             <button class="contactButton">Contact</button>
-        </container>
+        </div>
+        <div class="wrapper2">
+            <button class="projectButton2">Projects</button>
+            <button class="aboutButton2">About</button>
+            <button class="contactButton2">Contact</button>
+        </div>
     </main>
 </body>
 </html>
