tests: pixel background, button titles

--- a/index.html
+++ b/index.html
@@ -16,14 +16,25 @@
     </header>
     <main>
         <div class="wrapper1">
-            <button class="Button">Projects</button>
+            <button class="Button" style=
+                "background-image: url(media/mifacepixel.png); 
+                 background-size: cover;
+                 font-family: Pixelmap;
+                 font-size: 5vh;"
+                 >Projects</button>
             <button class="Button">TOFILL</button>
-            <button class="Button">Contact</button>
+            <button class="Button" style=
+                "font-family: Pixelmap;
+                 font-size: 5vh;"
+                 >Contact</button>
             <button class="Button">TOFILL</button>
         </div>
         <div class="wrapper2">
             <button class="Button">TOFILL</button>
-            <button class="Button">About</button>
+            <button class="Button" style=
+                "font-family: Pixelmap;
+                 font-size: 5vh;"
+                 >About</button>
             <button class="Button">TOFILL</button>
         </div>
     </main>
