feat: added image scaled

--- a/index.html
+++ b/index.html
@@ -17,25 +17,28 @@
     <main>
         <div class="wrapper1">
             <button class="Button" style=
-                "background-image: url(media/mifacepixel.png); 
+                "background-image: url(); 
                  background-size: cover;
                  font-family: Pixelmap;
                  font-size: 5vh;"
                  >Projects</button>
-            <button class="Button">TOFILL</button>
+            <button class="Button"></button>
             <button class="Button" style=
                 "font-family: Pixelmap;
                  font-size: 5vh;"
                  >Contact</button>
-            <button class="Button">TOFILL</button>
+            <button class="Button" style=
+                "background-image: url(media/mifacepixel.png); 
+                background-size: cover;
+                font-family: Pixelmap;"></button>
         </div>
         <div class="wrapper2">
-            <button class="Button">TOFILL</button>
+            <button class="Button"></button>
             <button class="Button" style=
                 "font-family: Pixelmap;
                  font-size: 5vh;"
                  >About</button>
-            <button class="Button">TOFILL</button>
+            <button class="Button"></button>
         </div>
     </main>
 </body>
