feat: github logo

--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
     <header>
         <h1>Guillem Senabre Prades</h1>
         <ul>
-            <li><p>About</p></li>
+            <li><div class="logoGitHub"></div></li>
             <li><button>CV</button></li>
         </ul>
     </header>
@@ -22,23 +22,20 @@
                  font-family: Pixelmap;
                  font-size: 5vh;"
                  >Projects</button>
-            <button class="Button"></button>
             <button class="Button" style=
                 "font-family: Pixelmap;
                  font-size: 5vh;"
                  >Contact</button>
-            <button class="Button" style=
+            <div style=
                 "background-image: url(media/mifacepixel.png); 
                 background-size: cover;
-                font-family: Pixelmap;"></button>
+                font-family: Pixelmap;"></div>
         </div>
         <div class="wrapper2">
-            <button class="Button"></button>
             <button class="Button" style=
                 "font-family: Pixelmap;
                  font-size: 5vh;"
                  >About</button>
-            <button class="Button"></button>
         </div>
     </main>
 </body>
