feat: project button, contact button finished

--- a/index.html
+++ b/index.html
@@ -10,32 +10,48 @@
     <header>
         <h1>Guillem Senabre Prades</h1>
         <ul>
-            <li><div class="logoGitHub"></div></li>
+            <li><a href="https://github.com/BakiRhina"><img src="media/githubpixel.png" style=     
+                "width: 5vh; 
+                 height: 5vh;
+                 cursor: pointer;"
+                ></a>
+            </li>
+
             <li><button>CV</button></li>
         </ul>
     </header>
+
     <main>
         <div class="wrapper1">
             <button class="Button" style=
-                "background-image: url(); 
+                "background-image: url(media/nightpixel.jpg); 
                  background-size: cover;
+                 color: #FFC300;
+                 border-color: #FFC300;
+                 text-shadow: 0vh 1vh 2vh black ;
                  font-family: Pixelmap;
-                 font-size: 5vh;"
-                 >Projects</button>
+                 font-size: 5vh;">Projects
+            </button>
+
             <button class="Button" style=
-                "font-family: Pixelmap;
-                 font-size: 5vh;"
-                 >Contact</button>
+                "background-image: url(media/handpixelmedia.jpg); 
+                 background-size: cover;
+                 color: black;
+                 border-color:mediumpurple;
+                 text-shadow: 0vh 1vh 2vh black ;
+                 font-family: Pixelmap;
+                 font-size: 5vh;">Contact
+            </button>
+
             <div style=
                 "background-image: url(media/mifacepixel.png); 
                 background-size: cover;
-                font-family: Pixelmap;"></div>
+                border-radius: 1vh;
+                font-family: Pixelmap;">
+            </div>
         </div>
+
         <div class="wrapper2">
-            <button class="Button" style=
-                "font-family: Pixelmap;
-                 font-size: 5vh;"
-                 >About</button>
         </div>
     </main>
 </body>
