feat: JS script to enlarge button completed

--- a/index.html
+++ b/index.html
@@ -23,26 +23,8 @@
 
     <main>
         <div class="wrapper1">
-            <button class="Button" style=
-                "background-image: url(media/nightpixel.jpg); 
-                 background-size: cover;
-                 color: #FFC300;
-                 border-color: #FFC300;
-                 text-shadow: 0vh 1vh 2vh black ;
-                 font-family: Pixelmap;
-                 font-size: 5vh;">Projects
-            </button>
-
-            <button class="Button" style=
-                "background-image: url(media/handpixelmedia.jpg); 
-                 background-size: cover;
-                 color: black;
-                 border-color:mediumpurple;
-                 text-shadow: 0vh 1vh 2vh black ;
-                 font-family: Pixelmap;
-                 font-size: 5vh;">Contact
-            </button>
-
+            <button id="projectButton" class="Button">Projects</button>
+            <button id="contactButton" class="Button">Contact</button>
             <div style=
                 "background-image: url(media/mifacepixel.png); 
                 background-size: cover;
@@ -54,5 +36,6 @@
         <div class="wrapper2">
         </div>
     </main>
+    <script src="js/main.js"></script>
 </body>
 </html>
