refactoring: using id instead of html style

--- a/index.html
+++ b/index.html
@@ -25,12 +25,7 @@
         <div class="wrapper1">
             <button id="projectButton" class="Button">Projects</button>
             <button id="contactButton" class="Button">Contact</button>
-            <div style=
-                "background-image: url(media/mifacepixel.png); 
-                background-size: cover;
-                border-radius: 1vh;
-                font-family: Pixelmap;">
-            </div>
+            <div id="profileImage"></div>
         </div>
 
         <div class="wrapper2">
