change: header button style

--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
 
     <main>
         <div class="wrapper1">
-            <button id="projectButton" class="Button">Projects</button>
+            <div id="projectDiv" class="Button">Projects</div>
             <button id="contactButton" class="Button">Contact</button>
             <div id="profileImage"></div>
         </div>
