feat: eventListener only in outermost div of ProjectDiv

--- a/index.html
+++ b/index.html
@@ -23,7 +23,11 @@
 
     <main>
         <div class="wrapper1">
-            <div id="projectDiv" class="Button">Projects</div>
+            <div id="projectDiv">Projects
+                <div>
+                    <button></button>
+                </div>
+            </div>
             <button id="contactButton" class="Button">Contact</button>
             <div id="profileImage"></div>
         </div>
