feat: project list division basic

--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
     <main>
         <div class="wrapper1">
             <div id="projectDiv">Projects
-                <div>
+                <div id="projectList">
                     <button></button>
                 </div>
             </div>
