feat: project list with buttons working correctly

--- a/index.html
+++ b/index.html
@@ -25,7 +25,14 @@
         <div class="wrapper1">
             <div id="projectDiv">Projects
                 <div id="projectList">
-                    <button></button>
+                    <button>Project 1</button>
+                    <button>Project 2</button>
+                    <button>Project 3</button>
+                    <button>Project 4</button>
+                    <button>Project 5</button>
+                    <button>Project 6</button>
+                    <button>Project 7</button>
+                    <button>Project 8</button>
                 </div>
             </div>
             <button id="contactButton" class="Button">Contact</button>
