feat: extend project division with buttons (basic style) completed

--- a/index.html
+++ b/index.html
@@ -25,14 +25,14 @@
         <div class="wrapper1">
             <div id="projectDiv">Projects
                 <div id="projectList">
-                    <button>Project 1</button>
-                    <button>Project 2</button>
-                    <button>Project 3</button>
-                    <button>Project 4</button>
-                    <button>Project 5</button>
-                    <button>Project 6</button>
-                    <button>Project 7</button>
-                    <button>Project 8</button>
+                    <button class="projectButtons">Reality gap Reduction</button>
+                    <button class="projectButtons">Project 2</button>
+                    <button class="projectButtons">Project 3</button>
+                    <button class="projectButtons">Project 4</button>
+                    <button class="projectButtons">Project 5</button>
+                    <button class="projectButtons">Project 6</button>
+                    <button class="projectButtons">Project 7</button>
+                    <button class="projectButtons">Project 8</button>
                 </div>
             </div>
             <button id="contactButton" class="Button">Contact</button>
