--- a/index.html
+++ b/index.html
@@ -22,11 +22,11 @@
     </header>
 
     <main>
-        <div class="wrapper1">
+        <div id="wrapper1">
             <div id="projectDiv">Projects
                 <div id="projectList">
                     <button class="projectButtons">Reality gap Reduction</button>
-                    <button class="projectButtons">Project 2</button>
+                    <button class="projectButtons">Sentiment Analysis with LLMs</button>
                     <button class="projectButtons">Project 3</button>
                     <button class="projectButtons">Project 4</button>
                     <button class="projectButtons">Project 5</button>
@@ -39,7 +39,7 @@
             <div id="profileImage"></div>
         </div>
 
-        <div class="wrapper2">
+        <div id="wrapper2">
         </div>
     </main>
     <script src="js/main.js"></script>
