feat: gift added; feat: projects div transition completed

--- a/index.html
+++ b/index.html
@@ -37,9 +37,14 @@
             </div>
             <button id="contactButton" class="Button">Contact</button>
             <div id="profileImage"></div>
-        </div>
-
-        <div id="wrapper2">
+            <div id="skillsDiv">Skills</div>
+            <div id="textDescription">
+                <p>My name is</p>
+                <p>Guillem Senabre,</p>
+                <p>welcome to my</p>
+                <p>digital</p>  
+                <p>portfolio!</p>
+            </div>
         </div>
     </main>
     <script src="js/main.js"></script>
