feat: skills div function works, to be improved

--- a/index.html
+++ b/index.html
@@ -47,6 +47,7 @@
             </div>
         </div>
     </main>
-    <script src="js/main.js"></script>
+    <script src="js/projectDiv.js"></script>
+    <script src="js/skillsDiv.js"></script>
 </body>
 </html>
