feat: text fades in when image is clicked

--- a/index.html
+++ b/index.html
@@ -49,5 +49,6 @@
     </main>
     <script src="js/projectDiv.js"></script>
     <script src="js/skillsDiv.js"></script>
+    <script src="js/imageDiv.js"></script>
 </body>
 </html>
